Source/WebCore/css/StyleResolver.cpp
@@ -1941,7 +1941,7 @@ static bool createGridTrackList(CSSValue* value, Vector<GridTrackSize>& trackSiz
 static bool createGridPosition(CSSValue* value, GridPosition& position)
 {
     // We accept the specification's grammar:
-    // 'auto' | [ <integer> || <string> ] | [ span && [ <integer> || string ] ] | <ident>
+    // auto | <custom-ident> | [ <integer> && <custom-ident>? ] | [ span && [ <integer> || <custom-ident> ] ]
     if (value->isPrimitiveValue()) {
         CSSPrimitiveValue* primitiveValue = toCSSPrimitiveValue(value);
         // We translate <ident> to <string> during parsing as it makes handling it simpler.
@@ -1958,8 +1958,7 @@ static bool createGridPosition(CSSValue* value, GridPosition& position)
     ASSERT(values->length());
 
     bool isSpanPosition = false;
-    // The specification makes the <integer> optional, in which case it default to '1'.
-    int gridLineNumber = 1;
+    int gridLineNumber = 0;
     String gridLineName;
 
     CSSValueListIterator it = values;
@@ -1983,7 +1982,7 @@ static bool createGridPosition(CSSValue* value, GridPosition& position)
 
     ASSERT(!it.hasMore());
     if (isSpanPosition)
-        position.setSpanPosition(gridLineNumber, gridLineName);
+        position.setSpanPosition(gridLineNumber ? gridLineNumber : 1, gridLineName);
     else
         position.setExplicitPosition(gridLineNumber, gridLineName);
 
